--- a/bar_update/index.html
+++ b/bar_update/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<p>click</p>
+<p>click on this text to update the chart with new data values as many times as you like!</p>
     <script src="index.js"></script>
 </body>
 
